# piano-generation

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt  utils.py
dashboards/: browse_database.py  components.py  generation.py  generation_review.py  generator_review.py  main.py  model_metrics_dashboard.py  prompt_practice.py  sources_review.py  task_review.py  transcription_human_comparison.py  utils.py
database/: database_connection.py  database_manager.py
generation/: generators.py  tasks.py
model/: dummy.py  tokenizers.py
models/: gpt2.py
piano_generation/: __init__.py  artifacts.py  utils.py
piano_generation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
piano_generation/database/: database_manager.py
piano_generation/generation/: generators.py  tasks.py
piano_generation/generation/generators/: __init__.py  base_generator.py  generator_types.py  next_token_generator.py  note_to_note_generator.py  seq_to_seq_generator.py  static_bpe_generator.py  static_generator.py
piano_generation/model/: dummy.py  gpt2.py  tokenizers.py
scripts/: download_all_models.py  download_model.py  generate_next_token_validation.py  generate_validation.py  model_metrics_analysis.py
sql/initdb/: init_database.sh  post_init.sql
sql/tables/: generations.sql  generators.sql  models.sql  prompt_notes.sql  sources.sql  validation_examples.sql
tmp/: bach.mid  random-melody.mid
tmp/prompts/: riff42.mid
