[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piano_generation"
version = "0.0.1"
description = "A package for piano music generation"
readme = "README.md"
authors = [
    { name = "Wojciech Matejuk", email = "wmatejuk14@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "datasets>=2.17.1",
    "fortepyan>=0.2.8",
    "hydra-core>=1.3.2",
    "midi_tokenizers @ git+https://github.com/Nospoko/midi-tokenizers",
    "pandas~=2.1.4",
    "python-dotenv==1.0.0",
    "streamlit==1.36.0",
    "streamlit-pianoroll>=0.7.1",
    "torch>=2.1.2",
]
requires-python = ">=3.9"

[project.urls]
homepage = "https://github.com/yourusername/piano-generation"
bug-tracker = "https://github.com/yourusername/piano-generation/issues"

[tool.setuptools.packages.find]
include = ["piano_generation*"]
